// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardTabMetric should render 1`] = `
<div>
  <span>
    <span
      class="primary-content"
    >
      <div
        class="metric-value"
      >
        10
        <span
          class="metric-value-letter"
        />
      </div>
    </span>
    <div
      class="analytics-trend"
      style="color: rgb(40, 125, 60);"
    >
      <svg
        class="icon-root lexicon-icon lexicon-icon-caret-top"
        viewBox=""
      >
        <use
          xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-top"
        />
      </svg>
      <span
        class="analytics-trend-percent mb-0"
      >
        2%
      </span>
    </div>
  </span>
</div>
`;

exports[`CardTabMetric should render in a give format type 1`] = `
<div>
  <span>
    <span
      class="primary-content"
    >
      <div
        class="metric-value"
      >
        8.50
        <span
          class="metric-value-letter"
        >
          /10
        </span>
      </div>
    </span>
    <div
      class="analytics-trend"
      style="color: rgb(40, 125, 60);"
    >
      <svg
        class="icon-root lexicon-icon lexicon-icon-caret-top"
        viewBox=""
      >
        <use
          xlink:href="/o/osb-faro-web/dist/sprite.svg#caret-top"
        />
      </svg>
      <span
        class="analytics-trend-percent mb-0"
      >
        2%
      </span>
    </div>
  </span>
</div>
`;
